refactor: 서비스 로직 형태 리팩